# ruqyah_telegram_bot

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: build.yml
src/: main.rs
src/cmd/: callback.rs  command.rs  db.rs  inline_query.rs  json.rs  keybaord.rs  mod.rs  options.rs  selection.rs
src/config/: file.rs
src/database/: mod.rs  table.rs  users.rs
