[package]
name = "legal_ruqyah_bot"
version = "1.0.0"
edition = "2021"
authors = ["Badr Azizi <badrazizi3@gmail.com>"]
repository = "https://github.com/badrazizi/ruqyah_telegram_bot"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
chrono = "0.4.38"

[build-dependencies]
dotenv = "0.15.0"
