[package]
name = "ruqyah_telegram_bot"
version = "1.0.0"
edition = "2021"
authors = ["Badr Azizi <badrazizi3@gmail.com>"]
repository = "https://github.com/badrazizi/ruqyah_telegram_bot"

[dependencies]
teloxide = { version = "0.13", features = [
    "macros",
    "ctrlc_handler",
    "rustls",
], default-features = false }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
chrono = { version = "0.4.38", features = ["clock"], default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
infer = "0.16.0"
notify = "7.0.0"
